--- a/server/vercel.json
+++ b/server/vercel.json
@@ -9,7 +9,14 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/"
+      "dest": "/",
+      "methods": ["GET", "POST", "PUT", "PATCH", "DELETE"],
+      "headers": {
+        "Access-Control-Allow-Origin": [
+          "http://localhost:5173",
+          "https://blogging-app-frontend-chi.vercel.app"
+        ]
+      }
     }
   ]
 }
