--- a/server/vercel.json
+++ b/server/vercel.json
@@ -9,7 +9,7 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/",
+      "dest": "/routers/api.js",
       "methods": ["GET", "POST", "PUT", "PATCH", "DELETE"],
       "headers": {
         "Access-Control-Allow-Origin": "https://blogging-app-frontend-chi.vercel.app"
