--- a/server/vercel.json
+++ b/server/vercel.json
@@ -2,18 +2,19 @@
   "version": 2,
   "builds": [
     {
-      "src": "*.js",
+      "src": "api/*.js",
       "use": "@vercel/node"
     }
   ],
-  "routes": [
+  "headers": [
     {
-      "src": "/(.*)",
-      "dest": "routers/api.js",
-      "methods": ["GET", "POST", "PUT", "PATCH", "DELETE"],
-      "headers": {
-        "Access-Control-Allow-Origin": "https://blogging-app-frontend-chi.vercel.app"
-      }
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "https://blogging-app-frontend-chi.vercel.app"
+        }
+      ]
     }
   ]
 }
