--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.0",
-    "react-transition-group": "^4.4.5"
+    "react-transition-group": "^4.4.5",
+    "vercel": "^39.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
