--- a/client/package.json
+++ b/client/package.json
@@ -22,17 +22,21 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.0",
     "react-transition-group": "^4.4.5",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.5",
     "vercel": "^39.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
-    "tailwindcss": "^3.4.4",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^2.2.19",
     "vite": "^5.3.1"
   }
 }
